--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,10 +6,6 @@
     android:versionCode="6"
     android:versionName="2.0.1">
 
-    <uses-sdk
-        android:minSdkVersion="15"
-        android:targetSdkVersion="23"/>
-
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
@@ -42,10 +38,10 @@
             android:theme="@style/Theme.Uome.HomeAsCross"/>
         <activity
             android:name=".activity.GroupListPersonTransactionsActivity"
-            android:label="@string/title_list_transactions_for_person"/>
+            android:label=""/>
         <activity
             android:name=".activity.SimpleListPersonTransactionsActivity"
-            android:label="@string/title_list_transactions_for_person"/>
+            android:label=""/>
         <activity
             android:name=".activity.SimpleAddTransactionActivity"
             android:theme="@style/Theme.Uome.HomeAsCross"/>
