changed person bar background to primary color * the description is always visible as the third row (if available) * deleted no longer used balance amount/hint

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,10 +38,12 @@
             android:theme="@style/Theme.Uome.HomeAsCross"/>
         <activity
             android:name=".activity.GroupListPersonTransactionsActivity"
-            android:label=""/>
+            android:label=""
+            android:theme="@style/Theme.Uome.NoActionBarShadow"/>
         <activity
             android:name=".activity.SimpleListPersonTransactionsActivity"
-            android:label=""/>
+            android:label=""
+            android:theme="@style/Theme.Uome.NoActionBarShadow"/>
         <activity
             android:name=".activity.SimpleAddTransactionActivity"
             android:theme="@style/Theme.Uome.HomeAsCross"/>
