SelectDirectoryActivity path text is now defined inside AppBarLayout together with a toolbar * no more special theme required - only Theme.Uome.NoActionBar * fixed toolbar title position in landscape - must have height defined by ?android:attr/actionBarSize * moved home menu item handling to BaseActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -75,7 +75,7 @@
         <activity
             android:name=".activity.SelectDirectoryActivity"
             android:label="@string/title_select_directory"
-            android:theme="@style/Theme.Uome.NoActionBarShadow"/>
+            android:theme="@style/Theme.Uome.NoActionBar"/>
         <activity
             android:name=".activity.AboutActivity"
             android:label="@string/title_about"/>
