IDEA Project structure cleanup - BACKUP IF NEEDED all files in .idea dir with custom settings (run configurations, ...), they will be deleted - initial import: add as a Gradle project, use recommended wrapper - everything else should be then autogenerated by IDEA and ignored by Git

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,10 @@
 
 /.idea/workspace.xml
 /.idea/libraries/
+/.idea/copyright/
+/.idea/*.xml
+!/.idea/codeStyleSettings.xml
+!/.idea/encodings.xml
+
+/*.iml
+/app/*.iml
