personbar in now inside AppBarLayout ->ensures correct bottom shadow * no more need for Theme.Uome.NoActionBarShadow * UomeActivity now automatically checks if the layout includes R.id.toolbar and sets it as the actionbar * also fixed centering of empty transaction list

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,11 +42,11 @@
         <activity
             android:name=".activity.GroupPersonDetailActivity"
             android:label=""
-            android:theme="@style/Theme.Uome.NoActionBarShadow"/>
+            android:theme="@style/Theme.Uome.NoActionBar"/>
         <activity
             android:name=".activity.SimplePersonDetailActivity"
             android:label=""
-            android:theme="@style/Theme.Uome.NoActionBarShadow"/>
+            android:theme="@style/Theme.Uome.NoActionBar"/>
         <activity
             android:name=".activity.SimpleAddTransactionActivity"
             android:theme="@style/Theme.Uome.HomeAsCross"/>
