--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -89,6 +89,27 @@
         <activity
             android:name=".activity.GroupOverviewActivity"
             android:theme="@style/Theme.Uome.NoActionBar"/>
+
+        <!-- widget configuration -->
+        <activity
+            android:name=".widget.config.WidgetConfigurationActivity"
+            android:label="@string/widget_configuration_title"
+            android:theme="@style/Theme.Uome.HomeAsCross">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE"/>
+            </intent-filter>
+        </activity>
+        <receiver android:name=".widget.WidgetProvider">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/widget_provider_info"/>
+        </receiver>
+        <service
+            android:name=".widget.WidgetService"
+            android:permission="android.permission.BIND_REMOTEVIEWS"/>
     </application>
 
 </manifest>
